--- a/app/templates/health/view_prescription.html
+++ b/app/templates/health/view_prescription.html
@@ -29,7 +29,7 @@
                     
                     <div class="row mb-3">
                         <div class="col-md-6">
-                            <strong>Medicine:</strong> {{ prescription.medicine_id }}
+                            <strong>Medicine:</strong> {{ prescription.medicine_name }}
                         </div>
                         <div class="col-md-6">
                             <strong>Dosage:</strong> {{ prescription.dosage }}
