--- a/app/templates/health/view_visit.html
+++ b/app/templates/health/view_visit.html
@@ -18,7 +18,7 @@
                             <strong>Student:</strong> {{ visit.student.user.username }} ({{ visit.student.roll_number }})
                         </div>
                         <div class="col-md-6">
-                            <strong>Doctor:</strong> {{ visit.doctor.user.username }}
+                            <strong>Doctor:</strong> {{ visit.doctor.username }} ({{ visit.doctor.first_name }} {{ visit.doctor.last_name }})
                         </div>
                     </div>
                     
